[metadata]
name = SleePy-LOKA
version = 0.0.1
author = Sleep Revolution(Anton Björn, Björgvin Ægir, Eva Björg, Margrét Sól)
author_email = antonm19@ru.is
description = BSc project for the Sleep Revolution research team
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AntonMayboeck/TestSleepy
project_urls =
    Bug Tracker = https://github.com/AntonMayboeck/TestSleepy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src